--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  /* border: 2px solid red; */
+  height: 100vh;
+  /* background-color: rgb(215, 138, 110); */
+  background-color: rgb(128, 122, 186);
+
+  /* min-width: fit-content; */
+}
+
+.App#dark{
+  background-color: rgb(29, 7, 67);
+}
+
+h1#dark{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap:5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.container{
+  display: grid;
+  grid-template-columns: repeat(8, 70px);
+  grid-template-rows: repeat(8, 70px);
+
+}
+
+.container div{
+  /* background-color: red; */
+  border: 2px solid black;
+  width: 100%; 
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* Black:
+2,4,6,8
+9,11,13,15
+16,18,20,22
+*/
+.cell-white-light{
+  background-color: white;
+}
+
+.cell-black-light{
+  background-color: black;
+}
+
+.cell-true-light{
+  background-color: red;
+}
+/*  */
+div .cell-move-light{
+  background-color: blue;
+}
+
+/* Dark mode colors */
+
+.cell-white-dark{
+  background-color: rgb(129, 121, 121);
+}
+
+.cell-black-dark{
+  background-color: black;
+}
+
+.cell-true-dark{
+  background-color: rgb(121, 7, 7);
+}
+/*  */
+div .cell-move-dark{
+  background-color: rgb(9, 9, 125);
+}
+
+
+@media screen and (max-width: 600px) {
+  .container{
+    display: grid;
+    grid-template-columns: repeat(8, 45px);
+    grid-template-rows: repeat(8, 45px);
+  
   }
-  to {
-    transform: rotate(360deg);
+
+  h1{
+    font-size: 20px;
   }
+  
 }
